<resources>

    <string name="app_name">无忧停车商家</string>
    <string name="app_icon">image</string>
    <string name="app_text"> </string>

    <string name="discount_choice">优惠选择</string>

    <string name="zero">0</string>
    <string name="rmb">¥&#160;</string>
    <string name="park_info">车辆信息</string>
    <string name="back_home_page">返回首页</string>
    <string name="free">全免</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="yuan">元</string>
    <string name="discount">折</string>

    <string name="no_use">未使用</string>
    <string name="limited_coupons">    该车优惠券数量已达上限！</string>
    <string name="already_use_coupons">已使用优惠券,不可再次使用！</string>
    <string name="coupons">优惠券</string>
    <string name="use_coupons">使用</string>
    <string name="send_coupons">发放</string>
    <string name="please_choice">请选择</string>
    <string name="choice_coupons_colon">选择优惠：</string>
    <string name="already_coupons_colon">已用优惠：</string>
    <string name="plate_number_colon">车牌号码：</string>
    <string name="park_ticket_colon">停车小票：</string>
    <string name="park_long_colon">停车时长：</string>
    <string name="park_fee_colon">停车费用：</string>
    <string name="send_coupons_colon">已发优惠：</string>
    <string name="upload_voucher">上传凭证</string>
    <string name="take_photo">拍照</string>
    <string name="image">图片</string>
    <string name="ticket_colon">小票：</string>
    <string name="hand_out_colon">发放：&#160;</string>
    <string name="valid_colon">有效期至：&#160;</string>
    <string name="total_coupons_colon">今日优惠券总数：</string>
    <string name="surplus_colon">剩余优惠券：</string>
    <string name="use_colon">使用：&#160;</string>
    <string name="today_use_colon">该类优惠券>>今日已用：</string>

    <string name="into">入场</string>
    <string name="see_big_image">看大图</string>
    <string name="provide_technical_support_from_51park">由无忧停车提供技术支持</string>


    <string name="search">搜索</string>
    <string name="search_plate">搜&#160;车&#160;牌</string>
    <string name="search_plate_number">search plate number</string>
    <string name="scan_ticket">扫&#160;小&#160;票</string>
    <string name="scan_park_ticket">scan park ticket</string>


    <string name="merchant_discount">商家优惠</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="coupons_record">优惠记录</string>
    <string name="setting">设置</string>
    <string name="modify_password">修改密码</string>
    <string name="exit_login">退出登录</string>

    <string name="login">登录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="submit">提交</string>

    <!--提示语-->
    <string name="loading_in">正在加载中…</string>
    <string name="network_anomaly">网络异常，请稍后再试！</string>

    <string name="prompt_search1">车辆未上牌，请扫停车小票查询</string>
    <string name="prompt_search2">未查到车辆时，请尝试少输车牌号搜索</string>
    <string name="prompt_search3">查询多车辆时，请对照图片和车主确认</string>


    <string name="please_input_username">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_old_password">请输入原密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_plate">请输入至少3位连续车牌号</string>
    <string name="please_choice_coupons">请选择优惠券</string>
    <string name="please_upload_voucher">( 请上传购物小票等停车抵扣凭证，只能上传一张图片 )</string>

    <string name="sorry_no_plate">抱歉！未查到该车牌号！</string>
    <string name="sorry_no_send_coupons">抱歉！未发放该类优惠券！</string>
    <string name="sorry_no_coupons">抱歉 您还没有优惠券！</string>
    <string name="sorry_coupons_already_used">优惠券已用完，请与停车场联系！</string>
    <string name="web_site">www.51park.com.cn</string>


    <string name="are_you_sure_exit">你确定要退出登录？</string>
    <string name="please_login_again">账号在别处登录，\n 请重新登录!</string>
    <string name="scan_hint">将小票二维码／条形码放入取景框内，即可自动扫描</string>
    <string name="two_hundred">200字</string>
    <string name="feedback">意见反馈</string>
    <string name="version">当前版本</string>
    <string name="belong_to_park">所属车场</string>
    <string name="username_balance">账户时长</string>
    <string name="discount_long">（优惠时长将从您的账户时长中扣除！）</string>
    <string name="discount_long_empty">（您的账户时长不足，请联系停车场充值！）</string>
    <string name="Balance_deduction">余额抵扣</string>
    <string name="balance_discount">余额优惠</string>
    <string name="not_recharge">未充值</string>
    <string name="one">1.</string>
    <string name="two">2.</string>

    <string name="prompt_balance_1">账户时长指您在停车场充值的时长优惠，充值后可以在发放优惠时选择"余额优惠",自定义要发放的内容.</string>
    <string name="prompt_balance_2">如果您账户时长不足15分钟或显示"未充值",则不能发放该类型优惠，请联系车场进行充值.</string>

    <!--<string name="prompt_balance_1">账户余额指您在停车场充值的优惠时长，充值后可以在发放优惠时选择“余额优惠”，自定义要发放的优惠时长；</string>-->
    <!--<string name="prompt_balance_2">如果您账户余额不足15分钟或显示“未充值”，则不能发放余额优惠，请联系车场进行充值；</string>-->

    <string name="please_input_number_case">(请输入6&#8211;20位数字或字母，区分大小写)</string>
    <string name="welcome_join_51park_feedback">欢迎使用无忧停车商家，如果您对我们的产品有任何意见或建议，请反馈给我们，无忧停车竭诚为您服务！</string>

    <!-- ======================== pullRefresh ======================== -->

    <string name="pull_up_to_loading">上拉加载</string>
    <string name="pull_down_to_refresh">下拉刷新</string>

    <string name="loading_succeed">加载成功</string>
    <string name="loading_failed">加载失败</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_failed">刷新失败</string>

    <string name="release_to_load">释放加载</string>
    <string name="release_to_refresh">松开刷新</string>

    <string name="loading">加载中…</string>
    <string name="refreshing">刷新中…</string>

    <!-- ======================== pullRefresh ======================== -->

</resources>
