<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style">

    <ScrollView
        android:id="@id/scrollView"
        style="@style/Layout_Match_Vertical_Style">

        <RelativeLayout style="@style/Layout_Match_Vertical_Style">


            <RelativeLayout
                android:id="@id/line_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px564"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@id/iv_icon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px564"
                    android:contentDescription="@string/app_icon"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bg_park_default" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px65"
                    android:layout_alignParentBottom="true"
                    android:alpha="0.4"
                    android:background="@color/black" />


                <!--入场时间-->

                <TextView
                    android:id="@id/tv_inTime"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/px65"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/px50"
                    android:gravity="center_vertical"
                    android:text="@string/app_text"
                    android:textColor="@color/white_font"
                    android:textSize="@dimen/px28" />

                <!--入场-->

                <View
                    android:layout_width="@dimen/px60"
                    android:layout_height="@dimen/px30"
                    android:layout_alignTop="@id/tv_inTime"
                    android:layout_marginEnd="@dimen/px10"
                    android:layout_marginTop="@dimen/px18"
                    android:layout_toStartOf="@id/tv_inTime"
                    android:alpha="0.5"
                    android:background="@drawable/draw_btn_checked" />

                <TextView
                    android:id="@id/text_1"
                    android:layout_width="@dimen/px60"
                    android:layout_height="@dimen/px30"
                    android:layout_alignTop="@id/tv_inTime"
                    android:layout_marginEnd="@dimen/px10"
                    android:layout_marginTop="@dimen/px18"
                    android:layout_toStartOf="@id/tv_inTime"
                    android:gravity="center"
                    android:text="@string/into"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px20" />


            </RelativeLayout>

            <TextView
                android:id="@id/tv_plate"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px70"
                android:layout_below="@id/line_1"
                android:layout_marginStart="@dimen/px50"
                android:layout_marginTop="@dimen/px72"
                android:text="@string/plate_number_colon"
                android:textColor="@color/black_font"
                android:textSize="@dimen/px32" />

            <TextView
                android:id="@id/tv_ticket"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px70"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/tv_plate"
                android:text="@string/park_ticket_colon"
                android:textColor="@color/black_font"
                android:textSize="@dimen/px32" />

            <TextView
                android:id="@id/tv_long"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px70"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/tv_ticket"
                android:text="@string/park_long_colon"
                android:textColor="@color/black_font"
                android:textSize="@dimen/px32" />

            <TextView
                android:id="@id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px70"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/tv_long"
                android:text="@string/park_fee_colon"
                android:textColor="@color/black_font"
                android:textSize="@dimen/px32" />


            <LinearLayout
                android:id="@+id/ll_send_coupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/tv_price"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/px70"
                    android:text="@string/send_coupons_colon"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/px32" />

                <com.zuoyu.business.widget.MyListView
                    android:id="@id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/transparent"
                    android:listSelector="@color/transparent" />
            </LinearLayout>

            <View
                android:id="@id/line_2"
                style="@style/View_Line_Style"
                android:layout_height="@dimen/px30"
                android:layout_below="@id/ll_send_coupons" />


            <!--上传凭证-->

            <RelativeLayout
                android:id="@+id/rl_upload"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px120"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/line_2">

                <ImageView
                    android:id="@id/icon_1"
                    android:layout_width="@dimen/px45"
                    android:layout_height="@dimen/px36"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/px40"
                    android:contentDescription="@string/app_icon"
                    android:src="@mipmap/icon_camera" />

                <TextView
                    android:id="@id/tv_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px24"
                    android:layout_toStartOf="@id/icon_1"
                    android:gravity="start"
                    android:text="@string/upload_voucher"
                    android:textColor="@color/orange_font"
                    android:textSize="@dimen/px32" />

                <TextView
                    android:id="@id/tv_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_upload"
                    android:layout_marginTop="@dimen/px20"
                    android:text="@string/please_upload_voucher"
                    android:textColor="@color/gray_font"
                    android:textSize="@dimen/px24" />

            </RelativeLayout>

            <View
                android:id="@id/line_3"
                style="@style/View_Line_Style"
                android:layout_below="@id/rl_upload"
                android:layout_marginTop="@dimen/px20" />

            <ImageView
                android:id="@+id/iv_upload"
                android:layout_width="@dimen/px178"
                android:layout_height="@dimen/px178"
                android:layout_alignStart="@id/tv_plate"
                android:layout_below="@id/line_3"
                android:layout_marginBottom="@dimen/px170"
                android:layout_marginTop="@dimen/px20"
                android:contentDescription="@string/app_icon"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="@dimen/px42"
                android:layout_height="@dimen/px42"
                android:layout_below="@id/line_3"
                android:layout_marginStart="-26px"
                android:layout_marginTop="@dimen/px10"
                android:layout_toEndOf="@id/iv_upload"
                android:contentDescription="@string/app_icon" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px120"
        android:layout_alignParentBottom="true"
        android:background="@color/orange">


        <LinearLayout
            android:id="@+id/ll_coupons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px60"
                android:text="@string/choice_coupons_colon"
                android:textColor="@color/white"
                android:textSize="@dimen/px36" />

            <TextView
                android:id="@id/tv_coupons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px60"
                android:maxLength="12"
                android:maxLines="1"
                android:text="@string/please_choice"
                android:textColor="@color/red_font"
                android:textSize="@dimen/px36" />

            <ImageView
                android:layout_width="@dimen/px22"
                android:layout_height="@dimen/px10"
                android:layout_marginStart="@dimen/px20"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/icon_choice" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_coupons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/px30"
            android:gravity="center"
            android:text="@string/already_use_coupons"
            android:textColor="@color/red_font"
            android:textSize="@dimen/px36"
            android:visibility="gone" />

        <TextView
            android:id="@id/tv_use_coupons"
            android:layout_width="@dimen/px146"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/px60"
            android:background="@color/red_font"
            android:gravity="center"
            android:text="@string/send_coupons"
            android:textColor="@color/white"
            android:textSize="@dimen/px36" />

    </RelativeLayout>


</RelativeLayout>